ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Acceptance_Building_Envelope__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Building_Envelope__c</fullName>
    <formula>IF(TEXT(Familiar_w_IKO_Building_Envelope__c) == &apos;Yes&apos;, 

IF(Contains(TEXT(AVB_IKO__c), &apos;%&apos;),
IF(VALUE(SUBSTITUTE(TEXT(AVB_IKO__c), &apos;%&apos;, &apos;&apos;)) &gt; 50,
   &apos;High&apos;,
   IF(VALUE(SUBSTITUTE(TEXT(AVB_IKO__c), &apos;%&apos;, &apos;&apos;)) &lt;= 50,
      &apos;Low&apos;,
      &apos;Unknown&apos;
      )
   ),
   &apos;Unknown&apos;
),

IF(TEXT(Familiar_w_IKO_Building_Envelope__c) == &apos;Not Applicable&apos;,
&apos;Not Applicable&apos;, 
&apos;Unknown&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acceptance - Building Envelope</label>
    <type>Text</type>
</CustomField>