ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Acceptance_Building_Envelope_Track__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Building_Envelope_Track__c</fullName>
    <label>Acceptance - Building Envelope - Track</label>
    <length>255</length>
    <type>Text</type>
</CustomField>