ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Acceptance_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Distributor__c</fullName>
    <formula>IF(Contains(TEXT(IKO_Products_Stocked__c), &apos;%&apos;), 
IF(VALUE(SUBSTITUTE(TEXT(IKO_Products_Stocked__c), &apos;%&apos;, &apos;&apos;)) = 0, 
&apos;Not Accepted&apos;, 
IF(VALUE(SUBSTITUTE(TEXT(IKO_Products_Stocked__c), &apos;%&apos;, &apos;&apos;)) &gt;= 50, 
&apos;High&apos;, 
IF(VALUE(SUBSTITUTE(TEXT(IKO_Products_Stocked__c), &apos;%&apos;, &apos;&apos;)) &gt; 10, 
&apos;Medium&apos;, 
IF(VALUE(SUBSTITUTE(TEXT(IKO_Products_Stocked__c), &apos;%&apos;, &apos;&apos;)) &lt;= 10, 
&apos;Low&apos;, 
&apos;Unknown&apos; 
)))), 
&apos;Unknown&apos; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acceptance - Distributor</label>
    <type>Text</type>
</CustomField>