ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Acceptance_Roofing_Track__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Roofing_Track__c</fullName>
    <label>Acceptance Roofing - Track</label>
    <type>TextArea</type>
</CustomField>