ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Accessories__c.field-meta.xml
<CustomField>
    <fullName>Accessories__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accessories</label>
    <type>Checkbox</type>
</CustomField>