ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Account_Email_Residential__c.field-meta.xml
<CustomField>
    <fullName>Account_Email_Residential__c</fullName>
    <label>Account Email</label>
    <type>Email</type>
</CustomField>