ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Account_Name_Address_Verified__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Address_Verified__c</fullName>
    <description>Name Not Verified is backwards, so sort of using this to obfuscate that and make other formulae easier to read.</description>
    <formula>IF( Account_Name_Verified__c = true
 &amp;&amp; ISPICKVAL(Address_Verification_Status__c, &apos;Verified&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Are both the name and the address not verified?</inlineHelpText>
    <label>Account Name &amp; Address Verified?</label>
    <type>Checkbox</type>
</CustomField>