ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Account_Name_Verified__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Verified__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Has the account name been verified? What you do with this information is up to you...but if this is FALSE it means no one has manually confirmed that IKO Shingles is actually named IKO Shingles or Jimmy Jame is actually named Jimmy James.</description>
    <inlineHelpText>Is the account name verified?</inlineHelpText>
    <label>Account Name Verified?</label>
    <type>Checkbox</type>
</CustomField>