ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <displayFormat>A-{0000000}</displayFormat>
    <label>Account Number</label>
    <type>AutoNumber</type>
</CustomField>