ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Account_Owner_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Profile_Name__c</fullName>
    <description>Used to filter OwnerIDs in &apos;Matching/Suggested TSR&apos;-flow for ROOFPRO</description>
    <formula>Owner.Profile.Name</formula>
    <label>Owner Profile</label>
    <type>Text</type>
</CustomField>