ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Account_Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Region__c</fullName>
    <formula>IF(AND(BEGINS(Owner.Profile.Name, &apos;USRS&apos;), CONTAINS( Owner.UserRole.Name , &apos;Midstates&apos;)), &quot;Midstates&quot;,
IF(AND(BEGINS(Owner.Profile.Name, &apos;USRS&apos;), CONTAINS( Owner.UserRole.Name , &apos;West&apos;)), &quot;West&quot;,
IF(AND(BEGINS(Owner.Profile.Name, &apos;USRS&apos;), CONTAINS( Owner.UserRole.Name , &apos;North&apos;)), &quot;North&quot;,
IF(AND(BEGINS(Owner.Profile.Name, &apos;USRS&apos;), CONTAINS( Owner.UserRole.Name , &apos;South&apos;)), &quot;South&quot;,
IF(AND(BEGINS(Owner.Profile.Name, &apos;USRS&apos;), CONTAINS( Owner.UserRole.Name , &apos;Leetland&apos;)), &quot;Leetland&quot;,
IF(OR( TEXT(BillingCountryCode) = &apos;US&apos;, BEGINS(Owner.Profile.Name, &apos;USRS&apos;)), &quot;US&quot;,
&quot;&quot;))))))</formula>
    <label>Account Owner Region</label>
    <type>Text</type>
</CustomField>