ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Account_Owner_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Role_Name__c</fullName>
    <formula>Owner.UserRole.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Role</label>
    <type>Text</type>
</CustomField>