ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supporting</fullName>
            </value>
            <value>
                <fullName>Non-Supporting</fullName>
            </value>
            <value>
                <fullName>Non-Supporting Target</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <isActive>false</isActive>
                <label>Prospect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>