ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/AccountLinkedWithNoDraftCases__c.field-meta.xml
<CustomField>
    <fullName>AccountLinkedWithNoDraftCases__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sinan for testing</description>
    <label>AccountLinkedWithNoDraftCases</label>
    <type>Checkbox</type>
</CustomField>