ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Address_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Verification_Status__c</fullName>
    <description>Indicate that the address validated by Melissa Data&apos;s service, reviewed by a Manager, or imported from the WCMS system (marked as &quot;Verified&quot;); &quot;In Approval&quot; denotes awaiting manager approval. &quot;Pending&quot; is while MelissaData is initializing record</description>
    <inlineHelpText>Indicate that the address validated by Melissa Data&apos;s service, reviewed by a Manager, or imported from the WCMS system (marked as &quot;Verified&quot;); &quot;In Approval&quot; denotes awaiting manager approval. &quot;Pending&quot; is while MelissaData is initializing record</inlineHelpText>
    <label>Address Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Verification</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>