ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Admin_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Admin_Email_Address__c</fullName>
    <description>Generic email address for company</description>
    <inlineHelpText>Generic email address for company</inlineHelpText>
    <label>Admin Email Address</label>
    <type>Email</type>
</CustomField>