ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/All_Approved_Rebate_Invoices__c.field-meta.xml
<CustomField>
    <fullName>All_Approved_Rebate_Invoices__c</fullName>
    <label>All Approved Rebate Invoices</label>
    <summarizedField>Invoice__c.Invoice_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Rebate_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invoice__c.Invoice_Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Contractor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>