ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/All_Paid_Amounts__c.field-meta.xml
<CustomField>
    <fullName>All_Paid_Amounts__c</fullName>
    <description>Paid amounts from all Account Payment records.</description>
    <label>All Paid Amounts</label>
    <summarizedField>IKOPRO_Account_Payment__c.Paid_Amount__c</summarizedField>
    <summaryForeignKey>IKOPRO_Account_Payment__c.Contractor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>