ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Annual_Insurance_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Annual_Insurance_Renewal__c</fullName>
    <label>IAAP Annual Hot Works Insurance Renewal</label>
    <type>Date</type>
</CustomField>