ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Applicant_Information__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Information</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>