ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Applicant_Stage__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Stage__c</fullName>
    <formula>TEXT(Applicant_Information__r.IKO_Signup_Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Stage</label>
    <type>Text</type>
</CustomField>