ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Application_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Start_Date__c</fullName>
    <description>Copied from Applicant Contact: Date the applicant passed the 1st signup screen.</description>
    <formula>Applicant_Information__r.Start_Date_Applicant__c</formula>
    <label>Application Start Date</label>
    <type>Date</type>
</CustomField>