ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Approval_Process_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Account_Name__c</fullName>
    <description>Formula hyperlink field that displays the Account associated with the Approval Process</description>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id, Name, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula hyperlink field that displays the Account associated with the Approval Process</inlineHelpText>
    <label>Approval Process Account Name</label>
    <type>Text</type>
</CustomField>