ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Aquabarrier__c.field-meta.xml
<CustomField>
    <fullName>Aquabarrier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aquabarrier</label>
    <type>Checkbox</type>
</CustomField>