ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Asphalt__c.field-meta.xml
<CustomField>
    <fullName>Asphalt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asphalt</label>
    <type>Checkbox</type>
</CustomField>