ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Assigned_Tier_Formula_on_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Tier_Formula_on_Applicant__c</fullName>
    <formula>Applicant_Information__r.Assigned_Tier_Formula__c</formula>
    <label>Assigned Tier (Applicant)</label>
    <type>Text</type>
</CustomField>