ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Atlas__c.field-meta.xml
<CustomField>
    <fullName>Atlas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atlas</label>
    <type>Checkbox</type>
</CustomField>