ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Available_Co_Op_Funds_For_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Available_Co_Op_Funds_For_Reporting__c</fullName>
    <description>This field is to be used in report filter to track if any contractor has negative Coop balance.</description>
    <formula>COOP_Funds_Credit__c - COOP_Funds_Debit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Co-Op Funds - For Reporting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>