ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Available_Co_Op_Funds_Formula__c.field-meta.xml
<CustomField>
    <fullName>Available_Co_Op_Funds_Formula__c</fullName>
    <description>Solution to show Coop Dollars as a currency in an environment with Multi-currency enabled.</description>
    <formula>&quot;$&quot; &amp;
IF( 
   Available_COOP_Funds__c  &gt;= 1000000, 
  TEXT(FLOOR(Available_COOP_Funds__c  / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Available_COOP_Funds__c  &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Available_COOP_Funds__c  / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Available_COOP_Funds__c  )), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Available_COOP_Funds__c  , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Available_COOP_Funds__c  , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Available_COOP_Funds__c  , 1), 2) * 100, 99)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Co-Op Funds</label>
    <type>Text</type>
</CustomField>