ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Available_Coop__c.field-meta.xml
<CustomField>
    <fullName>Available_Coop__c</fullName>
    <description>Available_COOP_Funds__c - Available_Premium_COOP_Funds__c</description>
    <formula>Available_COOP_Funds__c - Available_Premium_COOP_Funds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(deprecated) Available Co-Op Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>