ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Available_COOP_Funds__c.field-meta.xml
<CustomField>
    <fullName>Available_COOP_Funds__c</fullName>
    <formula>if(AND((COOP_Funds_Credit__c &gt; COOP_Funds_Debit__c),  Present_Tier_Lookup__r.Name &lt;&gt;&quot;Tier 0&quot;),COOP_Funds_Credit__c - COOP_Funds_Debit__c,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Co-Op Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>