ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Available_Premium_Cap_For_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Available_Premium_Cap_For_Reporting__c</fullName>
    <description>This field is to be used in a report filter to track if any contractor has a negative Premium Coop balance.</description>
    <formula>Premium_COOP_Funds_Credit__c - Premium_COOP_Funds_Debit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Premium Cap - For Reporting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>