ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Average_Annual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Average_Annual_Sales__c</fullName>
    <inlineHelpText>Estimated sales in bundles for the year for this Account.</inlineHelpText>
    <label>Average Annual Sales (Bundles)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>