ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Average_Annual_SQ_Cont__c.field-meta.xml
<CustomField>
    <fullName>Average_Annual_SQ_Cont__c</fullName>
    <description>Contractor&apos;s Average Annual SQ</description>
    <label>Average Annual SQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>