ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Average_Annual_SQ_Dist__c.field-meta.xml
<CustomField>
    <fullName>Average_Annual_SQ_Dist__c</fullName>
    <description>Distributor&apos;s Average Annual SQ</description>
    <formula>( SQs_IKO__c +  SQs_GAF__c +  SQs_CT__c +  SQs_OC__c +  SQs_Tamko__c +  SQs_Atlas__c +   SQs_Malarkey__c +  SQs_Pabco__c  + SQs_BP__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Annual SQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>