ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Awareness_Building_Envelope__c.field-meta.xml
<CustomField>
    <fullName>Awareness_Building_Envelope__c</fullName>
    <formula>TEXT(Familiar_w_IKO_Building_Envelope__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Awareness - Building Envelope</label>
    <type>Text</type>
</CustomField>