ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Awareness_Building_Envelope_Track__c.field-meta.xml
<CustomField>
    <fullName>Awareness_Building_Envelope_Track__c</fullName>
    <label>Awareness - Building Envelope - Track</label>
    <length>255</length>
    <type>Text</type>
</CustomField>