ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Awareness_Roofing__c.field-meta.xml
<CustomField>
    <fullName>Awareness_Roofing__c</fullName>
    <formula>TEXT(Familiar_w_IKO_Roofing__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Awareness - Roofing</label>
    <type>Text</type>
</CustomField>