ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Awareness_Roofing_Track__c.field-meta.xml
<CustomField>
    <fullName>Awareness_Roofing_Track__c</fullName>
    <label>Awareness Roofing - Track</label>
    <type>TextArea</type>
</CustomField>