ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/BE_Projects_Annually_Est_Quantity_del__c.field-meta.xml
<CustomField>
    <fullName>BE_Projects_Annually_Est_Quantity_del__c</fullName>
    <label>BE Projects Annually - Est Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>