ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Billing_County__c.field-meta.xml
<CustomField>
    <fullName>Billing_County__c</fullName>
    <inlineHelpText>Used for tracking the County of the address</inlineHelpText>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>