ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/BillingStateCode__c.field-meta.xml
<CustomField>
    <fullName>BillingStateCode__c</fullName>
    <formula>TEXT(BillingStateCode)</formula>
    <label>BillingStateCode</label>
    <type>Text</type>
</CustomField>