ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Bitumar__c.field-meta.xml
<CustomField>
    <fullName>Bitumar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bitumar</label>
    <type>Checkbox</type>
</CustomField>