ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/BP__c.field-meta.xml
<CustomField>
    <fullName>BP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BP</label>
    <type>Checkbox</type>
</CustomField>