ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Branch_Number__c</fullName>
    <description>Distributor&apos;s Branch Number</description>
    <label>Branch Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>