ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Bundles_YTD_2020_RUS__c.field-meta.xml
<CustomField>
    <fullName>Bundles_YTD_2020_RUS__c</fullName>
    <label>Bundles YTD (2020)</label>
    <summarizedField>Invoice__c.Total_Bundles__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Invoice_Year__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Contractor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>