ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Bundles_YTD__c.field-meta.xml
<CustomField>
    <fullName>Bundles_YTD__c</fullName>
    <formula>IF(TEXT(YEAR(TODAY()))= &quot;2020&quot;,
&quot;Last Year: &quot; &amp; TEXT(Bundles_YTD_2019_RUS__c) &amp; BR() &amp;
&quot;This Year: &quot; &amp; TEXT(Bundles_YTD_2020_RUS__c) &amp; BR(),

IF(TEXT(YEAR(TODAY()))= &quot;2021&quot;,
&quot;Last Year: &quot; &amp; TEXT(Bundles_YTD_2020_RUS__c) &amp; BR() &amp;
&quot;This Year: &quot; &amp; TEXT(Bundles_YTD_2018_RUS__c) &amp; BR(),

&apos;no information&apos;

))</formula>
    <label>Bundles YTD</label>
    <type>Text</type>
</CustomField>