ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/BUR_Category__c.field-meta.xml
<CustomField>
    <fullName>BUR_Category__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BUR</label>
    <type>Checkbox</type>
</CustomField>